--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "start":"node src/app.js"
   },
   "author": "",
   "license": "ISC",
